# zsnes

./: .clang-format  .gitignore  Bugs  CMakeLists.txt  ChangeLog  FURTHERPLANS.md  IMPORTANT.txt  INSTALL.txt  Makefile  Parsegen.cmake  README.md  SourceFiles.cmake  TODO.md  Uninst.isu  Wincvs.hlp  argv.h  asm.h  asm_call.h  asmdata.h  authors.txt  c_endmem.c  c_endmem_data.c  c_init.c  c_init.h  c_intrf.h  c_vcache.c  c_vcache.h  c_vcache_asm.c  cfg.psr  config.default  config.linux  config.template  cvscli.GID  debugasm.c  debugasm.h  debugger.c  debugger.h  deps.txt  endmem.asm  endmem.c  (+60 more)
.gear/: rules  zsnes.spec
Macros/: ChangeRoot.tcl  CvsInit.tcl  DocMacros.txt  FastModSearch.tcl  FilesTest.tcl  FolderTest.tcl
chips/: 7110emu.c  7110proc.asm  7110proc.c  7110proc.h  c4emu.c  c4proc.asm  c4proc.c  c4proc.h  c_7110proc.c  c_dsp2proc.c  c_obc1proc.c  c_obc1proc.h  c_sa1proc.c  c_sa1regs.c  c_sfxproc.c  dsp1emu.c  dsp1proc.asm  dsp1proc.c  dsp2proc.asm  dsp2proc.c  dsp2proc.h  dsp3emu.c  dsp3proc.c  dsp4emu.c  dsp4emu.h  dsp4proc.c  fxemu2.asm  fxemu2.h  fxemu2b.asm  fxemu2c.asm  fxtable.asm  msu1emu.c  msu1emu.h  msu1regs.asm  msu1regs.c  obc1emu.c  obc1proc.asm  obc1proc.c  regabi.h  sa1emu.c  (+14 more)
config/: cfg.c  cfg.h  cfg.psr  input.h  input.psr  md.h
cpu/: 65816d.inc  65816dc.inc  address.inc  address2.inc  c_65816d.c  c_dma.c  c_dsp.c  c_dspproc.c  c_execute.c  c_execute.h  c_irq.c  c_irq.h  c_memory.c  c_memory.h  c_regs.c  c_regs.h  c_regsw.c  c_stable.c  c_stable.h  c_table.c  c_tablec.c  dma.asm  dma.c  dsp.asm  dsp.h  dsp_mixers.h  dspproc.asm  dspproc.h  e65816.inc  e65816c.inc  execute.asm  execute.h  executec.c  firtable.h  firtable.inc  irq.asm  memory.asm  memory.h  memtable.c  memtable.h  (+19 more)
src/: .cvsignore  .gitignore  HACKING  Makefile  Makefile.check  Makefile.in  SConstruct  acinclude.m4  aclocal.m4  argv.h  asm.h  asm_call.h  autogen.sh  betauser.mac  burn.c  c_debugasm.c  c_debugasm.h  c_init.c  c_init.h  c_intrf.h  c_vcache.c  c_vcache.h  cfg.psr  cfgload.asm  cfgload.c  cfgparse.psr  config.guess  config.h.in  configure  configure.in  debug.c  debugasm.asm  debugasm.c  debugasm.h  debugger.c  debugger.h  endmem.asm  endmem.h  fixsin.c  fixsin.h  (+53 more)
src/chips/: 7110emu.c  7110proc.asm  7110proc.h  c4emu.c  c4proc.asm  c_dsp2proc.c  c_dsp2proc.h  c_sa1regs.c  c_sa1regs.h  c_sfxproc.c  c_sfxproc.h  dsp1emu.c  dsp1proc.asm  dsp2proc.asm  dsp2proc.h  dsp3emu.c  dsp3proc.asm  dsp4emu.c  dsp4emu.h  dsp4proc.asm  fxemu2.asm  fxemu2.h  fxemu2.mac  fxemu2b.asm  fxemu2b.mac  fxemu2c.asm  fxemu2c.mac  fxtable.asm  fxtable.h  obc1emu.c  obc1proc.asm  sa1emu.c  sa1proc.asm  sa1proc.h  sa1regs.asm  sa1regs.h  sdd1emu.c  seta10.c  seta11.c  sfxproc.asm  (+3 more)
src/cpu/: 65816d.h  65816d.inc  65816db.inc  65816dc.inc  address.inc  address2.inc  addrni.asm  addrni.inc  c_65816d.c  c_65816d.h  c_dma.c  c_dma.h  c_dsp.h  c_dspproc.c  c_dspproc.h  c_execute.c  c_execute.h  c_irq.c  c_irq.h  c_memory.c  c_memory.h  c_regs.c  c_regsw.c  c_regsw.h  c_table.h  c_tablec.c  c_tablec.h  dma.asm  dma.h  dsp.asm  dspproc.asm  dspproc.h  e65816.h  e65816.inc  e65816b.inc  e65816c.h  e65816c.inc  execute.asm  execute.c  execute.h  (+30 more)
src/debugger/: debugger.pro  debugger.ui  load.cpp  load.h  makefile.z  ui.cpp  ui.h  zthread.cpp  zthread.h
src/dos/: c_dosintrf.c  c_dosintrf.h  c_sound.c  c_sound.h  debug.asm  dosintrf.asm  dosintrf.h  gppro.asm  initvid.asm  initvid.h  joy.asm  joy.h  lib.c  lib.h  modemrtn.asm  sound.asm  sound.h  sw.asm  sw32.asm  vesa12.asm  vesa2.asm  vesa2.h  vga.inc  zfile.c  zloader.c  zsipx.asm
src/effects/: burn.c  fixsin.h  smoke.c  water.c
src/gui/: c_gui.c  c_gui.h  c_guicheat.c  c_guicheat.h  c_guicombo.c  c_guicombo.h  c_guikeys.c  c_guikeys.h  c_guimisc.c  c_guimisc.h  c_guimouse.c  c_guimouse.h  c_guitools.c  c_guitools.h  c_guiwindp.c  c_guiwindp.h  c_menu.c  c_menu.h  gui.asm  gui.h  guicheat.c  guicheat.h  guicheat.inc  guicombo.c  guicombo.h  guicombo.inc  guifuncs.c  guifuncs.h  guikeys.c  guikeys.h  guikeys.inc  guiload.inc  guimisc.c  guimisc.h  guimisc.inc  guimouse.c  guimouse.h  guimouse.inc  guinetpl.inc  guitools.c  (+7 more)
src/jma/: 7z.h  7zlzma.cpp  aribitcd.cpp  aribitcd.h  ariconst.h  btreecd.h  crc32.cpp  crc32.h  iiostrm.cpp  iiostrm.h  inbyte.cpp  jma.cpp  jma.h  lencoder.h  lzma.h  lzmadec.cpp  outbyte.cpp  outbyte.h  portable.h  rngcoder.h  zsnesjma.cpp  zsnesjma.h
src/linux/: audio.c  audio.h  battery.c  c_sdlintrf.c  copyvwin.asm  gl_draw.c  gl_draw.h  lib.c  lib.h  protect.c  resource.h  safelib.c  safelib.h  sdlintrf.asm  sdlintrf.h  sdllink.c  sdllink.h  sockserv.c  sockserv.h  sw_draw.c  sw_draw.h  winintrf.asm  x11.c  x11.h  zfilew.c  zipxw.c  zloaderw.c  zsnes.1  zsnes.5  zsnes.man  ztcp.c
src/mmlib/: linux.c  mm.c  mm.h  osx.c  windows.c
src/net/: ztcp.c
src/tools/: .cvsignore  archopt.c  compile.txt  cutrtype.cpp  cver.c  depbuild.cpp  extraext.cpp  fileutil.cpp  fileutil.h  macroll.cpp  minwhite.cpp  nreplace.cpp  objprefx.cpp  sec-test.cpp  srccount.cpp  strutil.cpp  strutil.h  symstrip.cpp  varrep.cpp
src/video/: 2xsai.cpp  2xsaimmx.inc  2xsaiw.asm  2xsaiw.h  2xsaiw.inc  c_2xsaiw.c  c_2xsaiw.h  c_copyvid.c  c_copyvid.h  c_copyvwin.c  c_copyvwin.h  c_makev16b.c  c_makev16b.h  c_makevid.c  c_makevid.h  c_newgfx16.c  c_newgfx16.h  c_procvid.c  c_procvid.h  c_sw_draw.c  c_sw_draw.h  copyvid.inc  copyvwin.asm  copyvwin.c  copyvwin.h  hq2x16.asm  hq2x32.asm  hq3x16.asm  hq3x32.asm  hq4x16.asm  hq4x32.asm  m716text.asm  makev16b.asm  makev16b.h  makev16t.asm  makevid.asm  makevid.h  mode7.asm  mode7.mac  mode716.asm  (+34 more)
src/video/snes_ntsc/: snes_ntsc.c  snes_ntsc.h  snes_ntsc.txt  snes_ntsc_config.h  snes_ntsc_impl.h
src/win/: afxres.h  c_winintrf.c  c_winintrf.h  confloc.psr  copyvwin.asm  dx_ddraw.cpp  gl_draw.c  gl_draw.h  lib.c  lib.h  resource.h  safelib.c  safelib.h  winintrf.asm  winintrf.h  winlink.cpp  winlink.h  zfilew.c  zipxw.c  zloaderw.c  zogl.c  zsnes.rc  ztcp.c
src/win/vc_head/: stdbool.h  stdint.h
src/win/vsync/: readme.txt  winlink.cpp
src/zip/: fir_proc.cpp  unzip.c  zpng.c  zpng.h  zunzip.h  zzip.c
(+475 files in other folders)
