option('with-debugger',
       type : 'boolean',
       value : false,
       description : 'built with debugger'
)
option('with-jma',
       type : 'boolean',
       value : true,
       description : 'built with JMA'
)
option('with-opengl',
       type : 'boolean',
       value : true,
       description : 'built with OpenGL'
)
option('with-png',
       type : 'boolean',
       value : true,
       description : 'built with PNG'
)